src/test/deca/syntax/valid/printWithMultipleArguments.deca
// Description:
//    Test d'un print avec plusieurs arguments
//
// Resultats:
//    PASS
//
// Historique:
//    Cree le 13/01/2024

{
    print("a", 3, "=", 2.4, b);
}
