src/test/deca/syntax/invalid/arithmetic-divideEqual.deca
// Description:
//    Divide Equal n'est pas sensé marché.
//
// Résultats:
//    Erreur parser l.12
//
// Historique:
//    Créé le 10/01/2024

{
   int a = 2;
   a/= 2;
}


